--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.3.3",
+    "prisma": "^4.16.2",
+    "ts-node": "^10.9.1",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
     "vitest": "^0.32.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.16.2"
   }
 }
