--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vitest": "^0.32.2"
   },
   "dependencies": {
-    "@prisma/client": "^4.16.2"
+    "@prisma/client": "^4.16.2",
+    "fastify": "^4.19.1",
+    "zod": "^3.21.4"
   }
 }
