feat: added dockerfile

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
-    "dev": "tsx --watch src/app.ts"
+    "dev": "tsx --watch src/app.ts",
+    "build": "tsup src",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +23,7 @@
   "dependencies": {
     "@prisma/client": "^4.16.2",
     "fastify": "^4.19.1",
+    "tsup": "^7.1.0",
     "zod": "^3.21.4"
   }
 }
